themes/addons/less/components.less
.accordion {
  .accordion-group {
    border-bottom-width: 0;
    margin-bottom: 0;

    &:last-child {
      border-bottom-width: 1px;
    }
  }

  .accordion-separator {
    background: lighten(@grayLighter, 2%);
    color: lighten(@textColor, 15%);
    font-weight: bold;

    .accordion-heading {
      padding: 8px 15px;
    }
  }
}

.add-ons {
  h3 {
    font-weight: 300;

    i {
      padding-right: 12px;
    }
  }
}

.table-addons {
  margin-top: 16px;
}

.addons-list-type {
  overflow: hidden;
  clear: both;

  a {
    display: block;
    float: right;
    width: 20px;
    margin-right: 15px;
    color: #dedede;

    &:hover {
      text-decoration: none;
      color: #1aa8eb;
    }

    &.current {
      color: #1aa8eb;
    }
  }

  i {
    width: 20px;
    height: 20px;
    font-size: 1.4em;
  }
}

.addons-box {
  margin-top: 16px;

  h3 {
    background: lighten(@grayLighter, 4%);
    border: 2px solid @grayLighter;
    border-bottom-width: 0;
    font-size: 16px;
    margin: 0;
    padding: 0 8px;
  }

  ul, ol {
    border: 2px solid @grayLighter;
    border-top-width: 0;
    margin: 0;

    li {
      list-style: none;

      a {
        border-top: 1px solid @grayLighter;
        display: block;
        padding: 8px;

        &:hover {
          background: lighten(@grayLighter, 4%);
          text-decoration: none;
        }
      }

      .meta, .description {
        color: #333;
        font-size: 13px;
      }

      .meta {
        float: right;
        margin-bottom: 1px;
      }

      .description {
        display: block;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
    }
  }

  .addons-box-holder {
    border: 2px solid @grayLighter;
    border-top-width: 0;
    margin: 0;
    border-top: 1px solid @grayLighter;
    padding: 8px;
    overflow: hidden;

    .placeholder {
      float: left;
      width: 150px;
      height: 150px;
      overflow: hidden;
      border: 1px solid @grayLighter;
      margin-right: 10px;
      background: url(../images/logo-placeholder.png) top left no-repeat;
      text-align: center;

      &.img {
        background: none;
        border: 0;
      }
    }

    .version {
      float: left;
      width: 37%;
      color: #777;
    }

    .meta {
      float: right;
      width: 25%;
      text-align: right;
      margin-bottom: 1px;
    }

    .description {
      display: block;
      clear: right;
      margin: 35px 0 0 162px;
    }
  }
}

.btn {
  &.btn-plain {
    background: none;
    border-color: @grayLighter;
    .box-shadow(none);
  }
}

.page-header {
  border-bottom: 5px solid @grayLighter;
  padding-bottom: @baseLineHeight * 0.2;

  h1 {
    color: @blueDark;
  }
  p {
    font-size: (@baseFontSize * 1.4);
    line-height: (@baseLineHeight * 1.4);
  }
}

.pagination {
  ul > li {
    display: inline-block;
    margin-right: 3px;

    a, span {
      border-left-width: 1px;
    }

    &.disabled span {
      border: none;
    }
  }
}

.tags {
  margin-left: 0;

  li {
    display: inline-block;

    a {
      background: @grayLighter;
      display: block;
      margin: 0 8px 12px 0;
      padding: 6px;

      &:hover {
        background: darken(@grayLighter, 2%);
        text-decoration: none;
      }

      .count {
        color: @grayLight;
      }
    }
  }
}

.install-box {
  background: none;
  border-color: #EEE;
  border-width: 0 0 1px 0;
  line-height: 40px;

  & > * {
    float: left;
    display: inline-block;
    vertical-align: middle;
  }

  pre {
    color: #888;
    background: none;
    border: none;
  }

  .install-box-label {
    margin-right: 5px;
  }
}

.rating {
  position: relative;
  color: #000;

  p {
    display: inline-block;
    font-size: 38px;
    font-weight: 700;
    line-height: 40px;
    margin-bottom: 0;
    margin-right: 5px;
  }
  small {
    font-size: 40%;
  }
  &.rating-border {
    display: inline-block;
    border: 2px solid #eee;
    padding: 8px 13px;
    margin-bottom: 10px;
    border-radius: 7px;
    -moz-border-radius: 7px;
    -webkit-border-radius: 7px;

    p {
      line-height: normal;
    }
  }
}

.rating-question {
  position: absolute;
  right: 0;
  top: -3px;
  color: #cfd8dc;
  font-size: 18px;

  &:hover {
    text-decoration: none;
  }
}

.rating-item {
  clear: both;
  margin-bottom: 5px;

  .circle {
    float: left;
    top: 0;
    margin-right: 10px;
  }
  p {
    line-height: 1.8em;
    margin: 0;
  }
}

.circle {
  position: relative;
  top: 3px;
  display: inline-block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  border-radius: 20px;
  -moz-border-radius: 20px;
  -webkit-border-radius: 20px;
  border: 5px solid #cfd8dc;
  margin-right: 3px;

  .circle-half {
    position: absolute;
    top: 0;
    left: 0;
    height: 12px;
    width: 24px;
    border-radius: 12px 12px 0 0;
    -moz-border-radius: 12px 12px 0 0;
    -webkit-border-radius: 12px 12px 0 0;
  }

  &.circle-sml {
    top: 0;
    width: 12px;
    height: 12px;
    border-radius: 6px 6px 6px 6px;
    -moz-border-radius: 6px 6px 6px 6px;
    -webkit-border-radius: 6px 6px 6px 6px;
    border: 0;

    .circle-half {
      top: 2px;
      left: 2px;
      height: 4px;
      width: 8px;
      border-radius: 4px 4px 0 0;
      -moz-border-radius: 4px 4px 0 0;
      -webkit-border-radius: 4px 4px 0 0;
    }
  }

  &.grey {
    background-color: #d7dfe2;

    .icon-ok {
      color: #cfd8dc;
    }
  }
  &.green {
    background-color: #5aa45d;
    border-color: #5aa45d;

    .circle-half {
      background-color: #fff;
    }
    .icon-ok {
      color: #5aa45d;
    }
  }

  &.circle-option-sml {
    width: 20px;
    height: 20px;
    border-width: 2px;
    background-color: transparent;

    .icon-ok {
      position: absolute;
      top: 3px;
      left: 3px;
    }
  }
}

